# mcp_auto_pr

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CI_CD_ALIGNMENT_ANALYSIS.md  CONFIGURATION_ALIGNMENT_SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  FUTURE_FEATURES.md  LINKEDIN_POST.md  MIGRATION_ANNOUNCEMENT.md  Makefile  README.md  RELEASE_CHECKLIST.md  conftest.py  coverage.xml  docker-compose.dev.yml  docker-compose.yml  epic-issue.md  github-actions-docker-build.yml  install.sh  mcp_auto_pr.code-workspace  mcp_bridge_setup.sh  mypy.ini  pyproject.toml  pyrightconfig.json  setup.sh  stdio_gateway_setup.sh  test_pypi_packages.py
.github/workflows/: ci.yml  ci.yml.backup  docker.yml  lint.yml.backup  release.yml  test.yml
.history/: README_20250602184850.md  README_20250602185225.md  README_20250602185251.md  README_20250602185316.md  README_20250602185425.md  README_20250602185442.md
.history/docs/: setup-guide_20250602184857.md
.history/planning/current/: TASK_20250602194752.md
dev/: Makefile  complete-mcp-setup-simple.sh
docker/analyzer/: Dockerfile
docker/recommender/: Dockerfile
docs/: architecture.md  docker-images-implementation-plan.md  logging_refactor_checklist.md  mcp-registry-submissions.md  production_open_source_checklist.md  setup-guide.md
docs/deprecated/: PROPER_RELEASE_WORKFLOW.md  PYPI_PUBLISHING.md  RELEASE_CHECKLIST.md  REMOVE_SHARED_LIB.md  improvement-plan.md  logging_refactor_checklist.md  mcp-registry-submissions.md  production_open_source_checklist.md  release-plan.md
docs/refactor/: 00-refactoring-status.md  01-current-state.md  02-monorepo-architecture.md  03-migration-strategy.md  04-test-coverage-plan.md  05-phase1-consolidation.md  06-phase2-cicd.md  11-pypi-publishing.md  13-command-reference.md  README.md  baseline-analysis.md  ci-cd-comprehensive.md  duplicate-code-analysis.md  github-migration-plan.md  implementation-checklist.md  issue-resolution-plan.md  mcp-shared-lib-analysis.md  post-pypi-cleanup-plan.md  shared-server-implementation.md
docs/refactor/archive/: 03-migration-strategy.md  04-test-coverage-plan.md  05-phase1-consolidation.md  06-phase2-cicd.md  11-pypi-publishing.md  README.md  mcp-shared-lib-analysis.md  post-pypi-cleanup-plan.md
docs/v0.2.0/: epic-1-cicd-stability.md  epic-2-test-coverage.md  epic-3-dev-workflow.md  epic-4-shared-library.md  github-issues-summary.md  implementation-plan-issue-6.md  overview.md
planning/current/: IMPLEMENTATION_GUIDE.md  ORGANIZATION_ALTERNATIVES.md  ORGANIZATION_PLAN.md  PLANNING.md  SIMPLE_NEXT_STEPS.md  TASK.md
scripts/: archive-linked-repos.sh  build-and-push-containers.sh  code_analyzer.py  config.sh  docker-setup.sh  health-check.sh  post-clone.sh  release.sh  setup-workspace.sh  test-enhanced-mcp.sh  test-servers.sh  test-setup.sh  update_imports.py  update_imports_ddd.py  update_imports_simplify.py
src/: __init__.py
src/mcp_local_repo_analyzer/: __init__.py  cli.py  config.py  main.py  server.py
src/mcp_local_repo_analyzer/models/: __init__.py  analysis_repository.py  changes.py  files.py  repository.py  results.py
src/mcp_local_repo_analyzer/services/: __init__.py  change_detector.py  client.py  diff_analyzer.py  status_tracker.py
src/mcp_local_repo_analyzer/tools/: __init__.py  staging_area.py  summary.py  unpushed_commits.py  working_directory.py
src/mcp_pr_recommender/: __init__.py  cli.py  config.py  main.py  server.py
src/mcp_shared_lib/: __init__.py
src/shared/: __init__.py
src/shared/base/: __init__.py  (+5 more)
tests/: test_ci_validation.py
tests/unit/: test_atomicity_validator.py  test_change_detector.py  test_diff_analyzer.py  test_feasibility_analyzer_tool.py  test_grouping_engine.py  test_manual.py  test_pr_recommender_tool.py  test_semantic_analyzer.py  test_server.py  test_services.py  test_staging_area.py  test_status_tracker.py  test_strategy_manager_tool.py  test_summary.py  test_tools_simple.py  test_unpushed_commits.py  test_validator_tool.py  test_working_directory.py
workspace/: mcp_workspace.code-workspace
(+32 files in other folders)
